overflow fixed

--- a/Flickity/flickity.css
+++ b/Flickity/flickity.css
@@ -11,7 +11,6 @@ https://flickity.metafizzy.co
 }
 
 .flickity-viewport {
-  position: relative;
   overflow: hidden;
 }
 
